[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/DoorwayArea/DoorwayArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 50 )

[node name="DoorwayArea" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Two_Label" type="Label" parent="Area2"]
margin_left = -61.2173
margin_top = -69.1676
margin_right = -20.2173
margin_bottom = -55.1676
rect_scale = Vector2( 3, 3 )
text = "Area 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area1" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 0, 30 )
shape = SubResource( 2 )

[node name="One_Label" type="Label" parent="Area1"]
margin_left = -59.3623
margin_top = 31.2712
margin_right = -19.3623
margin_bottom = 45.2712
rect_scale = Vector2( 3, 3 )
text = "Area1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
[connection signal="body_exited" from="Area2" to="." method="_on_Area2_body_exited"]
[connection signal="body_entered" from="Area1" to="." method="_on_Area1_body_entered"]
[connection signal="body_exited" from="Area1" to="." method="_on_Area1_body_exited"]
